# graphics-programming-2-vulkan-project-alessandromanzini

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/code/: Camera.cpp  Camera.h  MyApplication.cpp  MyApplication.h  Timer.cpp  Timer.h  TriangleApplication.cpp  TriangleApplication.h  UniformBufferObject.h  debug_callback.h  light.cpp  light.h  main.cpp
application/include/: TriangleApplication.h
application/shaders/: alpha_discard.frag  common.exposure.glsl  common.lighting.glsl  common.math.glsl  common.surface.glsl  common.texture.glsl  common.tone.glsl  common.transcode.glsl  cubemap.frag  cubemap.vert  depth.frag  empty.frag  gbuffer_gen.frag  geometry.frag  geometry.vert  irradiance_sampling.frag  lighting.frag  quad.vert  shader.frag  shader.vert  simple_color.frag  simple_transform.vert  spherical_sampling.frag  tone_mapping.frag  transform.vert
application/src/: TriangleApplication.cpp  main.cpp
cobalt/: CMakeLists.txt
cobalt/include/private/__builder/: VkBuilder.h  VkSwapchainBuilder.h
cobalt/include/private/__command/: AnisotropySamplingFeature.h  DynamicRenderingFeature.h  FamilyIndicesFeature.h  FeatureCommand.h  ShaderImgArrNonUniIdxFeature.h  SwapchainAdequateFeature.h  Synchronization2Feature.h
cobalt/include/private/__image/: StbImageLoader.h
cobalt/include/private/__query/: device_features_support.h  device_queries.h  extension_support.h  queue_family.h  swapchain_support.h
cobalt/include/private/__validation/: device_features.h
cobalt/include/private/cobalt_vk_internal/: feature_command.h
cobalt/include/public/: CobaltVK.h  ShaderModules.h  SingleTimeCommand.h  Vertex.h  VulkanDeviceQueries.h  log.h
cobalt/include/public/__buffer/: Buffer.h  CommandBuffer.h  CommandOperator.cpp  CommandOperator.h  CommandPool.h  FrameBuffer.h  Framebuffer.h
cobalt/include/public/__builder/: ModelLoader.h  PhysicalDeviceSelector.h  VkSwapchainBuilder.h
cobalt/include/public/__command/: Command.h  ValidationCommand.h  ValidationCommandBind.h
cobalt/include/public/__context/: DeviceSet.h  InstanceBundle.h  Queue.h  ValidationLayers.h  VkContext.h  Window.h
cobalt/include/public/__descriptor/: DescriptorAllocator.h  DescriptorSet.h  DescriptorSetLayout.h  DescriptorStructs.h  LayoutSpecs.h  WriteDescription.h
cobalt/src/: CobaltVK.cpp  ShaderModules.cpp  UniformBufferObject.cpp  VulkanDeviceQueries.cpp  log.cpp
cobalt/src/__buffer/: Buffer.cpp  CommandBuffer.cpp  CommandOperator.cpp  CommandPool.cpp  FrameBuffer.cpp  Framebuffer.cpp
cobalt/src/__builder/: ModelLoader.cpp  PhysicalDeviceSelector.cpp  VkSwapchainBuilder.cpp
cobalt/src/__cleanup/: DeletionQueue.cpp
cobalt/src/__command/: ValidationCommand.cpp
cobalt/src/__context/: DeviceSet.cpp  InstanceBundle.cpp  Queue.cpp  ValidationLayers.cpp  VkContext.cpp  Window.cpp
cobalt/src/__descriptor/: DescriptorAllocator.cpp  DescriptorSetLayout.cpp  LayoutSpecs.cpp  WriteDescription.cpp
cobalt/src/__enum/: DeviceFeatureFlags.cpp
cobalt/src/__image/: CubeMapImage.cpp  Image.cpp  ImageCollection.cpp  ImageLayoutTransition.cpp  ImageSampler.cpp  ImageView.cpp  StbImageLoader.cpp  TextureImage.cpp
cobalt/src/__model/: AssimpModelLoader.cpp  Model.cpp  ModelLoader.cpp
cobalt/src/__pipeline/: GraphicsPipeline.cpp  GraphicsPipelineBuilder.cpp  Pipeline.cpp  PipelineLayout.cpp
cobalt/src/__query/: device_features_support.cpp  device_queries.cpp  extension_support.cpp  queue_family.cpp  swapchain_support.cpp
cobalt/src/__render/: DescriptorAllocator.cpp  DescriptorSetLayout.cpp  Renderer.cpp  Swapchain.cpp  WriteDescription.cpp
cobalt/src/__renderer/: DescriptorAllocator.cpp  DescriptorSetLayout.cpp  GraphicsPipeline.cpp  Renderer.cpp  WriteDescription.cpp
cobalt/src/__shader/: ShaderModule.cpp
cobalt/src/__singleton/: CobaltVK.cpp
cobalt/src/__swapchain/: Swapchain.cpp
cobalt/src/__synchronization/: Fence.cpp  PresentInfo.cpp  RenderSync.cpp  Semaphore.cpp  SubmitInfo.cpp
cobalt/src/__validation/: compare.cpp  device_features.cpp  dispatch.cpp  result.cpp
cobalt/src/assets/: Buffer.cpp  Model.cpp  Window.cpp
cobalt/src/builders/: ModelLoader.cpp
cobalt/src/cleanup/: DeletionQueue.cpp
cobalt/src/validation/: PhysicalDeviceSelector.cpp  compare.cpp  dispatch.cpp  result.cpp
cobalt_vk/: CMakeLists.txt
cobalt_vk/compilers/shaders/: compile.sh
cobalt_vk/include/: ResourcePool.h  ShaderModules.h  SingleTimeCommand.h  Singleton.h  UniformBufferObject.h
cobalt_vk/include/assets/: Buffer.h  Model.h
cobalt_vk/include/builders/: BufferBuilder.h  ModelLoader.h
cobalt_vk/include/cleanup/: DeletionQueue.cpp  DeletionQueue.h  Releasable.h
cobalt_vk/include/public/: ShaderModules.h  SingleTimeCommand.h  UniformBufferObject.h  Vertex.h  VulkanDeviceQueries.h
cobalt_vk/include/queries/: format_queries.h  memory_queries.h  queue_family_queries.h  swapchain_support_queries.h
cobalt_vk/include/validation/: dispatch.h  result.h
cobalt_vk/src/: ResourcePool.cpp  ShaderModules.cpp  VulkanDeviceQueries.cpp
cobalt_vk/src/assets/: Buffer.cpp  Model.cpp  Window.cpp
cobalt_vk/src/builders/: BufferBuilder.cpp  ModelLoader.cpp
cobalt_vk/src/cleanup/: DeletionQueue.cpp
cobalt_vk/src/instance/: CobaltInstance.cpp  ValidationLayers.cpp  VulkanInstance.cpp
cobalt_vk/src/queries/: format_queries.cpp  memory_queries.cpp  queue_family_queries.cpp  swapchain_support_queries.cpp
cobalt_vk/src/query/: queue_family.cpp
cobalt_vk/src/validation/: PhysicalDeviceSelector.cpp  dispatch.cpp  result.cpp
program/: CMakeLists.txt
program/src/: main.cpp
vulkan/: CMakeLists.txt
vulkan/include/: ShaderModules.h  TriangleApplication.h  Vertex.h  VulkanDeviceQueries.h
vulkan/shaders/: compile_legacy.sh  shader.frag  shader.vert
vulkan/shaders/compilers/: compile.bat
vulkan/src/: ShaderModules.cpp  TriangleApplication.cpp  UniformBufferObject.cpp  VulkanDeviceQueries.cpp
xos/: CMakeLists.txt
xos/include/xos/: filesystem.h  info.h
xos/src/apple/: filesystem.cpp  info.cpp
xos/src/win32/: filesystem.cpp  info.cpp
(+97 files in other folders)
